[gd_scene load_steps=11 format=3 uid="uid://mvfeujtkvhkc"]

[ext_resource type="SpriteFrames" uid="uid://xpba6qtmeqvf" path="res://src/flip_frames.tres" id="1_3cfgd"]
[ext_resource type="Script" uid="uid://cqjlnwn7x0djg" path="res://src/main.gd" id="2_fyndt"]
[ext_resource type="SpriteFrames" uid="uid://x5t4briwimbw" path="res://src/flip_below_frames.tres" id="3_kmhfv"]
[ext_resource type="SpriteFrames" uid="uid://biy4nb0gjucob" path="res://src/flip_above_frames.tres" id="4_rlaii"]
[ext_resource type="Texture2D" uid="uid://c3m3lepfew1e1" path="res://assets/icons/next-page.png" id="5_fyndt"]
[ext_resource type="SpriteFrames" uid="uid://c4syxg663x6fx" path="res://src/film_effect_frames.tres" id="6_kmhfv"]
[ext_resource type="AudioStream" uid="uid://pgirmnp21dvb" path="res://assets/music/Leo Reisman and His Orchestra - Lonely (1927).mp3" id="7_rlaii"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kmhfv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlaii"]
size = Vector2(720, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmhfv"]
size = Vector2(100, 720)

[node name="Root" type="Node2D"]

[node name="Page" type="AnimatedSprite2D" parent="."]
position = Vector2(363, 452)
sprite_frames = ExtResource("1_3cfgd")
script = ExtResource("2_fyndt")

[node name="PageBelow" type="AnimatedSprite2D" parent="Page"]
clip_children = 1
sprite_frames = ExtResource("3_kmhfv")

[node name="PageAbove" type="AnimatedSprite2D" parent="Page"]
clip_children = 1
sprite_frames = ExtResource("4_rlaii")

[node name="NextPageButton" type="Area2D" parent="Page"]
position = Vector2(298, 198)

[node name="NextPageIcon" type="Sprite2D" parent="Page/NextPageButton"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_fyndt")

[node name="NextPageCollision" type="CollisionShape2D" parent="Page/NextPageButton"]
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_kmhfv")

[node name="FilmEffect" type="AnimatedSprite2D" parent="Page"]
position = Vector2(-379, -15)
scale = Vector2(1, 1.044)
sprite_frames = ExtResource("6_kmhfv")

[node name="BorderCollision" type="StaticBody2D" parent="."]
top_level = true

[node name="Top" type="CollisionShape2D" parent="BorderCollision"]
position = Vector2(360, -50)
shape = SubResource("RectangleShape2D_rlaii")

[node name="Bottom" type="CollisionShape2D" parent="BorderCollision"]
position = Vector2(360, 770)
shape = SubResource("RectangleShape2D_rlaii")

[node name="Left" type="CollisionShape2D" parent="BorderCollision"]
position = Vector2(-50, 360)
shape = SubResource("RectangleShape2D_kmhfv")

[node name="Right" type="CollisionShape2D" parent="BorderCollision"]
position = Vector2(770, 360)
shape = SubResource("RectangleShape2D_kmhfv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rlaii")
autoplay = true
bus = &"Music"

[connection signal="animation_finished" from="Page" to="Page" method="_on_page_animation_finished"]
[connection signal="input_event" from="Page/NextPageButton" to="Page" method="_on_next_page_button_input_event"]
